Forget about DS_Store, pls

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ DerivedData/
 !default.perspectivev3
 
 ## Obj-C/Swift specific
-*.hmap
+*.map
 
 ## App packaging
 *.ipa
@@ -88,3 +88,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+**/.DS_Store
+**/*.xcuserstate
