Add Inter Fonts

--- a/loveMyPet/loveMyPet/Info.plist
+++ b/loveMyPet/loveMyPet/Info.plist
@@ -22,6 +22,15 @@
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Italic.ttf</string>
 		<string>Poppins-MediumItalic.ttf</string>
+		<string>Inter-Black.ttf</string>
+		<string>Inter-ExtraBold.ttf</string>
+		<string>Inter-Bold.ttf</string>
+		<string>Inter-SemiBold.ttf</string>
+		<string>Inter-Medium.ttf</string>
+		<string>Inter-Regular.ttf</string>
+		<string>Inter-Light.ttf</string>
+		<string>Inter-ExtraLight.ttf</string>
+		<string>Inter-Thin.ttf</string>
 	</array>
 </dict>
 </plist>
